Spacing issue in some hashing slideshows

--- a/AV/Hashing/collisionCON.css
+++ b/AV/Hashing/collisionCON.css
@@ -1,3 +1,11 @@
+#collisionCON3.jsavcontainer {
+  height: 280px;
+}
+
+#collisionCON4.jsavcontainer {
+  height: 280px;
+}
+
 #collisionCON7.jsavcontainer {
   height: 250px;
 }
